@@ -22,6 +22,9 @@ Sample::sample{
  int lv2;
  eq(lv1, lv2);
  eq(lv1, p1);
+ any(Sample.sample sample);
+ eq(start, sample.start);
+ eq(object, sample.object);
 }
 
 class World{
@@ -34,5 +37,6 @@ class World{
 
 World::initialState{
  any (Sample.sample s);
+ eq("foo", "bar");
 }
 
