@@ -12,7 +12,7 @@
 //  remain on all copies of the software.
 
 /**
-   @file error-test.cc
+   @file module-tests.cc
    @author Will Edgington
 
    @brief A small test of classes Error and TestData and the related
